syntax = "proto3";

package tcMsgpb;

option go_package = "../tcMsgpb";

// The TcMsgHandle service definition.
service TcMsgHandle {
  // Handles a received tcMsg message
  rpc TcMsgReceive (TcMsg) returns (TcMsgResponse) {}
}

// The request message containing the user's name.
message TcMsg {
  int64 round = 1;
  string maskedMsg = 2;
  int64 h_a = 3;
  int64 h_b = 4;
  int64 h_c = 5;
  int64 Mk_a = 6;
  int64 Mk_b = 7;
  int64 Mk_c = 8;
  int64 a1_a = 9;
  int64 a1_b = 10;
  int64 a1_c = 11;
  int64 a2_a = 12;
  int64 a2_b = 13;
  int64 a2_c = 14;
  string z = 15;
  int64 id = 16;
  string sig = 17;
}

message TcMsgResponse {}